# os

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  boot.asm  compile_commands.json  linker.ld  toolchain.sh
boot/: CMakeLists.txt  Makefile  boot.s  grub.cfg  limine.cfg
kernel/: CMakeLists.txt  Makefile  io.S  io.c  io.h  kernel.c  kernel.cpp  serial.c  serial.cpp  serial.h  types.h  util.cpp  util.h  vga.c  vga.cpp  vga.h
kernel/gui/: window.cpp  window.h
kernel/include/: stdbool.h  stddef.h  stdint.h  string.h
kernel/util/: error.h  optional.h  result.h
libc/: Makefile
libc/include/: result.h  stddef.h  stdnoreturn.h
libc/lib/: Makefile  string.c
meta/: make_iso.sh
